Add the page size

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<!-- all the cool stuff goes here! -->
+<h?>Find your calm in the noise✨</h>
 </body>
