Made the heading

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<h?>Find your calm in the noise✨</h>
+    <h1>✨Find your calm in the noise✨</h1>
 </body>
