--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="top-box"></div>
     <h1>✨Find your calm in the noise✨</h1>
 </body>
