--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <div class="top-box"></div>
+    <div class="top-box">
+        <img src="../assets/logo.png" alt="Soft Echo Logo" class="logo-img">
+        <div class="logo-text">SoftEcho</div>
+    </div>
     <h1>✨Find your calm in the noise✨</h1>
 </body>
