logo and text alignment

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <div class="top-box">
         <img src="../assets/logo.png" alt="Soft Echo Logo" class="logo-img">
         <div class="logo-text">SoftEcho</div>
+        <nav class="nav-menu">
+            <a href="#home" class="nav-link">Home</a>
+            <a href="#cafe" class="nav-link">Cafe</a>
+            <a href="#Games" class="nav-link">Games</a>
+            <a href="#To watch list" class="nav-link">To watch list</a>
+            <a href="#To do list" class="nav-link">To do list</a>
+        </nav>
     </div>
     <h1>✨Find your calm in the noise✨</h1>
 </body>
