--- a/cafe.html
+++ b/cafe.html
@@ -8,12 +8,11 @@
         <img src="../assets/logo.png" alt="Soft Echo Logo" class="logo-img">
         <div class="logo-text">SoftEcho</div>
         <nav class="nav-menu">
-            <a href="cafe.html" class="nav-link">Cafe</a>
+            <a href="index.html" class="nav-link">Home</a>
             <a href="games.html" class="nav-link">Games</a>
             <a href="watchlist.html" class="nav-link">To watch list</a>
             <a href="todolist.html" class="nav-link">To do list</a>
         </nav>
     </div>
-    <h1>✨Find your calm in the noise✨</h1>
 </body>
 </html>
