Add hover to cafe

--- a/cafe.html
+++ b/cafe.html
@@ -4,9 +4,9 @@
     <link href="cafe.css" rel="stylesheet">
 </head>
 <body>
+    <div class="hover-area"></div>
     <div class="top-box">
         <img src="../assets/logo.png" alt="Soft Echo Logo" class="logo-img">
-        <div class="logo-text">SoftEcho</div>
         <nav class="nav-menu">
             <a href="index.html" class="nav-link">Home</a>
             <a href="games.html" class="nav-link">Games</a>
