Add moving character

--- a/cafe.html
+++ b/cafe.html
@@ -14,5 +14,9 @@
             <a href="todolist.html" class="nav-link">To do list</a>
         </nav>
     </div>
+
+    <div class="character-container">
+        <div class="character"></div>
+    </div>
 </body>
 </html>
