Add speech to character

--- a/cafe.html
+++ b/cafe.html
@@ -16,7 +16,9 @@
     </div>
 
     <div class="character-container">
-        <div class="character"></div>
+        <div class="character">
+            <div class="speech-bubble"></div>
+        </div>
     </div>
 </body>
 </html>
