Add start button

--- a/cafe.html
+++ b/cafe.html
@@ -20,5 +20,18 @@
             <div class="speech-bubble"></div>
         </div>
     </div>
+
+    <!-- Dark overlay that appears after speech bubble -->
+    <div class="dark-overlay"></div>
+    
+    <!-- Clickable button that appears on the dark overlay -->
+    <button class="action-button" onclick="handleButtonClick()"></button>
+
+    <script>
+        function handleButtonClick() {
+            console.log("Button clicked!");
+            alert("Button was clicked!");
+        }
+    </script>
 </body>
 </html>
